// TensorFlow tensor proto
syntax = "proto3";

package tensorflow;

message TensorProto {
  int32 dtype = 1;
  TensorShapeProto tensor_shape = 2;

  int32 version_number = 3;
  bytes tensor_content = 4;

  repeated int32 half_val = 13;
  repeated float float_val = 5;
  repeated double double_val = 6;
  repeated int32 int_val = 7;
  repeated bytes string_val = 8;
  repeated float scomplex_val = 9;
  repeated int64 int64_val = 10;
  repeated bool bool_val = 11;
}

message TensorShapeProto {
  repeated Dim dim = 2;
  bool unknown_rank = 3;

  message Dim {
    int64 size = 1;
    string name = 2;
  }
}
